--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>AI Tools Directory - ai.laxmannepal.com.np</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <script defer src="scripts/fetchTools.js"></script>
+</head>
+<body>
+  <header>
+    <h1>AI Tools Directory</h1>
+    <input id="search" type="search" placeholder="Search AI tools..." />
+  </header>
+  <main>
+    <div id="category-filters"></div>
+    <div id="tools-grid" class="grid-container"></div>
+  </main>
+</body>
+</html>
