--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
             async function loadTools() {
                 try {
                     // Replace this URL with your actual JSON file path
-                    const response = await fetch('https://example.com/path/to/tools.json');
+                    const response = await fetch('https://raw.githubusercontent.com/LaxmanNepal/AIToolsBYLaxman/refs/heads/main/data/tools.json');
                     
                     if (!response.ok) {
                         throw new Error('Failed to load tools');
